# image

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  biicode.conf  imageconfig.h.in  imageconfigmeson.h.in  meson.build  wercker.yml
bii/: layout.bii
inc/image/: image.h  imagefactory.h  imageloadstoreinterface.h
src/: imagefactory.cpp  imageloadstorejpeg.cpp  imageloadstorejpeg.h  imageloadstorepng.cpp  imageloadstorepng.h
test/: CMakeLists.txt  imageloadingtest.cpp  imagetestconfig.h.in  imagetestconfigmeson.h.in  meson.build
