CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

GET_DIRECTORY_PROPERTY(UTILS_INCLUDE_DIRS	DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../../utils" DEFINITION UTILS_INCLUDE_DIRS)
GET_DIRECTORY_PROPERTY(UTILS_LIBRARIES      DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../../utils" DEFINITION UTILS_LIBRARIES)

INCLUDE_DIRECTORIES(
    ${UTILS_INCLUDE_DIRS}
    ${IMAGE_INCLUDE_DIRS}
    ${CMAKE_CURRENT_SOURCE_DIR}
)

LINK_DIRECTORIES(
    ${IMAGE_LIBRARY_DIRS}
)

ADD_EXECUTABLE(imagetest EXCLUDE_FROM_ALL
    gmock-gtest-all.cpp
    main.cpp
    imageloadingtest.cpp
)

TARGET_LINK_LIBRARIES(imagetest
    ${IMAGE_LIBRARIES}
)

SET(IMAGE_TEST_DATA_DIR ${CMAKE_CURRENT_SOURCE_DIR}/data)
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/imagetestconfig.h.in ${CMAKE_BINARY_DIR}/imagetestconfig.h)

ADD_TEST(ImageTests imagetest) 
ADD_DEPENDENCIES(check imagetest)